# Colophon

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: authorship.md  cli.md  publishing.md  python-api.md  reference.md  site-design.md  template-reference.md
src/colophon/: __main__.py  build.py  cli.py  collections.py  content.py  core.py  errors.py  expressions.py  images.py  mastodon.py  models.py  project.py  render.py  scaffold.py  serve.py  utils.py  vendor.py  version.py
src/colophon/deploy/: config.py  mastodon.py  pipeline.py  transports.py
src/colophon/scaffold_templates/default/: README.md  site_hooks.py
src/colophon/scaffold_templates/default/content/: images.yml  index.yml  site.yaml
src/colophon/scaffold_templates/default/content/pages/: features.yml  hooks.md  images.md  template-variables.md
src/colophon/scaffold_templates/default/content/posts/: hello-world.md
src/colophon/scaffold_templates/default/templates/: post.html  simple.html
tests/: test_core.py  test_package.py
