[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "colophon-site"
version = "0.1.0"
description = "A content-driven static site generator for YAML, Markdown, and Jinja sites."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "Jinja2>=3.1",
  "PyYAML>=6.0",
  "mistune>=3.0",
  "python-slugify>=3.0",
  "python-frontmatter>=1.0",
  "dateparser>=1.0",
  "readability>=0.3",
  "syntok>=1.4",
  "beautifulsoup4>=4.0",
  "Pillow>=10.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup :: HTML",
]

[project.scripts]
colophon = "colophon.cli:main"
colophon-site = "colophon.cli:main"

[project.optional-dependencies]
sftp = ["paramiko>=3"]

[project.urls]
Homepage = "https://github.com/AeonCypher/Colophon"
Repository = "https://github.com/AeonCypher/Colophon"
Issues = "https://github.com/AeonCypher/Colophon/issues"
Documentation = "https://github.com/AeonCypher/Colophon#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
colophon = ["scaffold_templates/**/*"]

[tool.setuptools.exclude-package-data]
colophon = ["**/__pycache__/*", "**/*.py[cod]"]
